<resources>
    <string name="app_name">CheckList</string>
    <string name="app_name_cn">CheckList 清单</string>
    <string name="title_home">主页</string>
    <string name="title_setting">更多</string>
    <string name="NaN">NaNNaNNaN</string>
    <string name="add_list">添加清单</string>
    <string name="update_list">修改清单</string>
    <string name="addplaceholder">清单名称</string>
    <string name="dateplaceholder">截止时间</string>
    <string name="abouttitle">关于 CheckList 清单</string>
    <string name="copyright_cn">唐丰圆 许禾昕 版权所有</string>
    <string name="copyright_us">Copyright © 2021 Tang F. and Xu H. All Right Reserved.</string>
    <string name="version">Version 1.0.7 正式版</string>
    <string name="setting_masterplate">模版管理</string>
    <string name="setting_archive">已归档</string>
    <string name="setting_trash">回收站</string>
    <string name="setting_backup">备份与还原</string>
    <string name="setting_feedback">问题反馈</string>
    <string name="setting_share">应用分享</string>
    <string name="setting_about">关于 CheckList 清单</string>
    <string name="clear_trash">清空回收站</string>
    <string name="clicktoadd">点击添加</string>
    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="search_foot">没有更多了</string>
</resources>